# Engine3

./: Cargo.toml  README.md
benches/: generator.rs  intersection_benchmark.rs
docs/guides/: developer_guide.md
docs/planning/completed/: blueprints.md
docs/planning/pending/: roadmap.md
src/: app.rs  camera.rs  demo_scene.rs  generator.rs  intersection.rs  lib.rs  main.rs  reference.html  renderer.rs  scene.rs  shader.rs  ui.rs
src/engine_lib/: camera.rs  controller.rs  mod.rs  scene_logic.rs  scene_types.rs  side_handler.rs
src/rendering_lib/: geometry.rs  intersection.rs  lib.rs  mod.rs  renderer.rs  shader.rs  vertex.rs
