[package]
name = "convex_polygon_intersection"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.19"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"
rand = "0.8"
pollster = "0.3"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
criterion = "0.5" # Check for the latest version

[features]
default = []

[[bench]]
name = "intersection_benchmark" # You can name this file benches/intersection_benchmark.rs
harness = false

[profile.release]
debug = true