[package]
name = "engine3_app" # Or your binary crate name
version = "0.1.0"
edition = "2021"

# [[bin]] # You might have this if your main.rs is not src/main.rs
# name = "engine3_app"
# path = "src/main.rs"

[dependencies]
winit = "0.29" # Check for latest version
wgpu = "0.19"  # Check for latest version
env_logger = "0.10"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
bytemuck = { version = "1.12", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
# approx = "0.5.1" # If needed by geometry/intersection for comparisons

# Local library dependencies
engine_lib = { path = "src/engine_lib" }
rendering_lib = { path = "src/rendering_lib" }

[features]
default = []

[[bench]]
name = "intersection_benchmark" # You can name this file benches/intersection_benchmark.rs
harness = false

[profile.release]
debug = true